2010-02-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-itmedia.el (shimbun-itmedia-group-alist): Add ogikubo, tachibana,
	and unakami groups in the +D.lifestyle.column hierarchy.
	(shimbun-index-url, shimbun-get-headers): Work for newly added groups.

2010-01-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-clear-contents): Fix regexp matching the
	end of contents.

2010-01-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mew-shimbun.el (mew-kill-buffer): Use with-current-buffer rather than
	save-excursion + set-buffer.
	(mew-mark-clean-up): Use save-current-buffer instead of save-excursion.

	* sb-fml.el (shimbun-make-contents): Use point-at-eol rather than
	`(save-excursion (end-of-line) (point))'; use point-at-bol rather than
	beginning-of-line + point.

2009-11-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nytimes.el (shimbun-get-headers): Remove "By " from From header.

2009-11-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-atom.el (shimbun-atom-get-headers): Silence XEmacs' byte compiler.

	* sb-atom-hash.el (shimbun-atom-compose-tag): Don't quote lambda form.

2009-10-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el (shimbun-clear-contents): Fix the way to extract pre-
	formatted contents.

2009-10-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el (shimbun-kantei-groups, shimbun-index-url)
	(shimbun-from-address, shimbun-get-headers): Support m-magazine-cn and
	m-magazine-kr groups.

2009-10-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-clear-contents): Fix regexp matching
	captions after images.

2009-10-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el (shimbun-clear-contents): Don't remove footer.

2009-10-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el (shimbun-clear-contents): Allow irregularly formatted
	tags that separate sub contents.

2009-10-13  David Engster  <dengste@eml.cc>

	* sb-zeit-de.el (shimbun-zeit-de-groups): Updated group list.